--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "chart.js": "^4.4.4",
     "vue": "^3.4.37",
+    "vue-chartjs": "^5.3.1",
     "vuetify": "^3.7.0"
   },
   "devDependencies": {
